<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Niger Pot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_send_order">SendOrder</string>
    <string name="name">Name</string>
    <string name="phone">Phone No.</string>
    <string name="address">Address</string>
    <string name="quantity">Quantity</string>
    <string name="pick_up">Pick Up</string>
    <string name="deliver">Deliver</string>
    <string name="send_order">Send Order</string>
    <string name="abacha">Abacha  NGN750</string>
    <string name="view_order">VIEW ORDER</string>
    <string name="title_activity_order__successful">Order_Successful</string>
    <string name="order_successful">Your order is successful \n Thank You </string>
    <string name="title_activity_view_order">ViewOrder</string>
    <string name="snacks_drinks">Need snacks or drinks click to order</string>
    <string name="title_activity_featured_food">FeaturedFood</string>
    <string name="food">FEATURED FOOD</string>
    <string name="ifobudia">Ifob Udia  NGN500</string>
    <string name="sawa">Sawa  NGN800</string>
    <string name="ukom">Ukom  NGN450</string>
    <string name="akpakpa">Akpakpa  NGN700</string>



</resources>
